docs(readme): overhaul documentation and delete legacy root Dockerfile
- Delete root Dockerfile (replaced by per-service docker/*/Dockerfile
  and K8s manifests in k8s/overlays/prod)
- Rewrite README.md with professional header, tech stack badges (Java 21,
  Spring Boot 3.5.13, Kubernetes, OpenAI), 3-step quick start, service
  port map (8080-8088), and standardized observability links
- Update docker-compose.yml to remove monolith backend service, point
  frontend to host.docker.internal, and add migration note
- Add Quick API Reference section to USAGE.md with curl examples for
  auth login (/api/auth/login), AI-powered loan apply (/api/lending/apply),
  and system-wide health checks via Gateway
- Add Strategic Decoupling section to ARCHITECTURE.md describing how
  Gateway handles cross-cutting concerns (Auth, Rate Limiting, Resilience)
  while business logic stays in 8 downstream services
- Fix outdated version references in ARCHITECTURE.md (Java 25 -> 21,
  Spring Boot 4.0.4 -> 3.5.13 LTS, Spring Modulith 1.4.0 -> 1.3.3)
- Add Zero-Skip test policy to CONTRIBUTING.md: PRs with @Disabled tests
  or failed integration tests are automatically rejected by CI
- Update CONTRIBUTING.md prerequisites and local dev instructions